[tool.poetry]
name = "accimage"
version = "0.1.0"
description = ""
authors = ["Allonte <angelosheltie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
imageio = "^2.34.0"
pytest = "^8.0.1"
setuptools = "^69.1.0"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
